weird gap error fixed

--- a/css/Festivals.css
+++ b/css/Festivals.css
@@ -1,4 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #f4faf6;
+}
 nav {
     display: flex;
     justify-content: space-between;
