--- a/css/Trek.css
+++ b/css/Trek.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #f4faf6;
+}
 
 nav {
     display: flex;
@@ -93,8 +103,6 @@ nav {
 }
 
 
-
-
 .page_hero {
     height: 300px;
     background-size: cover;
@@ -105,10 +113,13 @@ nav {
     flex-direction: column;
     gap: 10px;
 }
+
+
 .page_hero_treks {
     background-image: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
         url(../images/Trekk.jpeg);
-}.page_hero h1 {
+}
+.page_hero h1 {
     font-size: 46px;
     color: #a6ebd3;
     font-weight: 900;
