--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #f4faf6;
+}
 
 nav {
     display: flex;
@@ -95,7 +105,7 @@ nav {
 
 
 .page_hero {
-    height: 300px;
+    height: 400px;
     background-size: cover;
     background-position: center;
     display: flex;
